app/globals.css
@import "tailwindcss";

:root {
  --background: #ffffff;
  --foreground: #171717;
}

@theme inline {
  --color-background: var(--background);
  --color-foreground: var(--foreground);
  --font-sans: var(--font-geist-sans);
  --font-mono: var(--font-geist-mono);
}

@media (prefers-color-scheme: dark) {
  :root {
    --background: #0a0a0a;
    --foreground: #ededed;
  }
}

body {
  background: var(--background);
  color: var(--foreground);
  font-family: Arial, Helvetica, sans-serif;
}

@layer components {
  .scrollable-table-container {
    @apply border border-dashed rounded overflow-x-auto;
  }
  
  .scrollable-table {
    @apply w-full text-base min-w-max;
  }
  
  .scrollable-table th,
  .scrollable-table td {
    @apply py-2 pr-4 whitespace-nowrap p-4;
  }
  
  .scrollable-table thead tr {
    @apply border-b border-zinc-300 dark:border-zinc-700 text-center font-semibold underline;
  }
  
  .scrollable-table tbody tr {
    @apply border-b border-zinc-100 dark:border-zinc-800 last:border-0 text-center;
  }
}

